fix hover and attachment alignment in threads

--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -218,22 +218,16 @@ $left-gutter: 64px;
         border-bottom-left-radius: 4px;
     }
 
-    &:hover.mx_EventTile_verified .mx_EventTile_line,
-    &:hover.mx_EventTile_unverified .mx_EventTile_line,
-    &:hover.mx_EventTile_unknown .mx_EventTile_line {
-        padding-left: calc($left-gutter - $selected-message-border-width);
-    }
-
     &:hover.mx_EventTile_verified .mx_EventTile_line {
-        border-left: $e2e-verified-color $selected-message-border-width solid;
+        box-shadow: inset $selected-message-border-width 0 $e2e-verified-color;
     }
 
     &:hover.mx_EventTile_unverified .mx_EventTile_line {
-        border-left: $e2e-unverified-color $selected-message-border-width solid;
+        box-shadow: inset $selected-message-border-width 0 $e2e-unverified-color;
     }
 
     &:hover.mx_EventTile_unknown .mx_EventTile_line {
-        border-left: $e2e-unknown-color $selected-message-border-width solid;
+        box-shadow: inset $selected-message-border-width 0 $e2e-unknown-color;
     }
 
     &:hover.mx_EventTile_verified.mx_EventTile_info .mx_EventTile_line,
@@ -851,7 +845,7 @@ $left-gutter: 64px;
         padding-top: 0;
 
         .mx_EventTile_line {
-            padding-left: $selected-message-border-width !important;
+            padding-left: 0;
             order: 10 !important;
         }
 
@@ -860,6 +854,7 @@ $left-gutter: 64px;
             right: 2px !important;
             top: 1px !important;
             font-size: 1rem;
+            text-align: right;
         }
 
         .mx_ReactionsRow {
@@ -878,8 +873,19 @@ $left-gutter: 64px;
         margin-right: 50px;
 
         .mx_EventTile_content,
-        .mx_RedactedBody {
+        .mx_RedactedBody,
+        .mx_MImageBody {
             margin: 0;
+        }
+    }
+
+    .mx_EventTile_mediaLine {
+        padding-left: 36px !important;
+        padding-right: 50px;
+
+        .mx_MImageBody {
+            margin: 0;
+            padding: 0;
         }
     }
 
